[gd_scene load_steps=11 format=2]

[ext_resource path="res://knight.tres" type="Texture" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://sword.tres" type="Texture" id=4]
[ext_resource path="res://Weapon.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.78892

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 29.8205 )

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("InnnerRotation:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, -2, -0.5 ),
"update": 0,
"values": [ 25.0, 135.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InnnerRotation/Weapon/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
smoothing_enabled = true
smoothing_speed = 6.652
script = ExtResource( 2 )
rollIncrement = 0.187
max_offset = Vector2( 0, 0 )
max_roll = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.5 )
shape = SubResource( 1 )

[node name="PlayerAnimator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )
next/walk = "idle"

[node name="WeaponGuide" type="Position2D" parent="."]
position = Vector2( 0, -3.5 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="InnnerRotation" type="Position2D" parent="WeaponGuide"]
rotation = 1.5708

[node name="Weapon" type="Area2D" parent="WeaponGuide/InnnerRotation" groups=[
"attack",
]]
position = Vector2( 0, -10 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 5 )
damage = 1

[node name="sword" type="Sprite" parent="WeaponGuide/InnnerRotation/Weapon"]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
offset = Vector2( 0, -6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponGuide/InnnerRotation/Weapon"]
position = Vector2( -1.52588e-05, -35.7471 )
shape = SubResource( 4 )
disabled = true

[node name="WeaponAnimation" type="AnimationPlayer" parent="WeaponGuide"]
anims/attack = SubResource( 5 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 0, -13.434 )
texture = ExtResource( 1 )
hframes = 9
frame = 1
